--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
     <title>Vue TodoList</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div id="app">
+        <div class="container pt-4">
+            <div class="d-flex align-items-center justify-content-center">
+                <input type="text" placeholder="Add new task">
+                <button class="btn btn-primary ms-3">Add</button>
+            </div>
+            <div>
+                <ul class="list-group list-group-flush" v-if="todoList.length > 0">
+                    <li v-for="(element,index) in todoList" class="list-group-item d-flex justify-content-between">
+                        <span @click="todoComplete(index)" :class="(todoList[index].done == true) ? 'text-decoration-line-through' : ''" class="cursor-pointer">{{index}} | {{element.text}}</span>
+                        <i class="fa-solid fa-xmark text-danger"></i>
+                    </li>
+                  </ul>
+                  <h2 v-else>Non ci sono elementi nella todoList</h2>
+            </div>
+
+            <!--COMPLETED SECTION-->
+            <h2 class="my-5">Todo Completate</h2>
+        </div>
         
 
     </div>
